# lib_udp

./: README.md
lib_udp/: CMakeLists.txt  change_log.md  del_build_dir.bat  light_weight.bat  readme.md
lib_udp/cmake/: findlibuv64.cmake
lib_udp/example/: main.cc
lib_udp/include/: Looper.h  Packet.h  UDPImp.h  icommonunication.h  iudp.h  lib_commu_def.h  uv_utils.h
lib_udp/include/udp/: udp_def.h  udp_imp.h  universe_def.h
lib_udp/src/: Looper.cc  UDPImp.cc  icommonunication.cc  iudp.cc  udp_imp.cc
udp_socket/: CMakeLists.txt  change_log.md  light_weight.bat  mkdir_build.bat
udp_socket/cmake/: spdlog.cmake
udp_socket/example/: main.cpp
udp_socket/example/mfc_call_dll_demo_vs_2017/: light_file.bat  mfc_demo.sln
udp_socket/example/mfc_call_dll_demo_vs_2017/mfc_demo/: ReadMe.txt  mfc_demo.aps  mfc_demo.cpp  mfc_demo.h  mfc_demo.rc  mfc_demo.vcxproj  mfc_demo.vcxproj.filters  mfc_demoDlg.cpp  mfc_demoDlg.h  my_udp.cpp  my_udp.h  resource.h  stdafx.cpp
udp_socket/example/mfc_call_dll_demo_vs_2017/mfc_demo/Debug/: mfc_demo.res
udp_socket/example/mfc_call_dll_demo_vs_2017/mfc_demo/include/: udp_interface.h
udp_socket/example/mfc_call_dll_demo_vs_2017/mfc_demo/res/: mfc_demo.rc2
udp_socket/include/udp/: udp_def.h  udp_interface.h  udp_socket_imp.h  udp_wsa.h
udp_socket/src/: udp_interface.cpp  udp_socket_imp.cpp  udp_wsa.cpp
